<resources>
    <!-- Home Screen strings -->
    <string name="app_name">Movement Strategy Assessment</string>
    <string name="title_home">Home</string>
    <string name="title_assessment">Assessments</string>
    <string name="title_results">Results</string>
    <string name="title_research">Research</string>
    <string name="text_assessment_status">Current assessment status: </string>
    <string name="mobility_assessment">Mobility Assessment</string>
    <string name="movement_assessment">Movement Assessment</string>
    <string name="static_posture_assessment">Static Posture Assessment</string>
    <string name="start_new_assessment">Start New Assessment</string>
    <string name="status_display_message">Current Assessment Status:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <!-- Static posture assessment strings -->


    <!-- -->
</resources>