<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.movementstrategyassessment.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_assessment"
        android:name="com.example.movementstrategyassessment.ui.assessment.AssessmentFragment"
        android:label="@string/title_assessment"
        tools:layout="@layout/fragment_assessment" />

    <fragment
        android:id="@+id/navigation_results"
        android:name="com.example.movementstrategyassessment.ui.results.ResultsFragment"
        android:label="@string/title_results"
        tools:layout="@layout/fragment_results" />

    <fragment
        android:id="@+id/navigation_research"
        android:name="com.example.movementstrategyassessment.ui.research.ResearchFragment"
        android:label="@string/title_research"
        tools:layout="@layout/fragment_research" />
</navigation>