<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".ui.assessment.AssessmentFragment">

    <LinearLayout
        android:id="@+id/layout_unstarted_assessment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="427dp"
        tools:layout_editor_absoluteY="322dp">

        <TextView
            android:id="@+id/assessment_text_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_new_assessment"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/start_new_assessment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_static_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <fragment
            android:id="@+id/static_posture_fragment"
            android:name="com.example.movementstrategyassessment.ui.assessment.StaticPostureFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:label="@string/static_posture_assessment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout="@layout/fragment_static_posture" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_movement_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="427dp"
        tools:layout_editor_absoluteY="322dp">

        <fragment
            android:id="@+id/movement_assessment_fragment"
            android:name="com.example.movementstrategyassessment.ui.assessment.MovementAssessmentFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:label="@string/movement_assessment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout="@layout/fragment_movement_assessment" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_mobility_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="427dp"
        tools:layout_editor_absoluteY="322dp">

        <fragment
            android:id="@+id/mobility_assessment_fragment"
            android:name="com.example.movementstrategyassessment.ui.assessment.MobilityAssessmentFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:label="@string/mobility_assessment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout="@layout/fragment_mobility_assessment" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_assessment_navigation_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <fragment
            android:id="@+id/assessment_navigation_footer"
            android:name="com.example.movementstrategyassessment.ui.assessment.AssessmentNavigatorFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout="@layout/fragment_assessment_navigator" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>